# Vulkan-CAE-3D-viewer

./: CMakeLists.txt  README.md  conanfile.py  main.qml
.claude/: settings.local.json
assets/: car.bdf  model.bdf
docs/: PROJECT_NOTES.md
experiments/nastran_test/: CMakeLists.txt  nastran_test.cpp
experiments/vtk_smoketest/: CMakeLists.txt  smoketest.cpp
shaders/: axes.vert  edges.frag  edges.vert  mesh.frag  mesh.vert  triangle.vert
src/: DisplayMode.h  Mesh.cpp  Mesh.h  TrackballCamera.cpp  TrackballCamera.h  ViewerItem.cpp  ViewerItem.h  VulkanRenderer.cpp  VulkanRenderer.h  main.cpp
src/io/: NastranReader.cpp  NastranReader.h  VtkSurface.cpp  VtkSurface.h
test/data/: formats.bdf  tet_and_shells.bdf
